--- a/templates/gt/info-event.html
+++ b/templates/gt/info-event.html
@@ -1,4 +1,4 @@
-<div>EVENTO</div>
+<div class="event-name">{=lastEvent}</div>
 <div class="info-form-main unit-conn-{=connected}">
     <div class="name" data-id="vehicle_name"></div>
     <div class="unit-conn">
