--- a/sass/gt_tool.scss
+++ b/sass/gt_tool.scss
@@ -575,3 +575,33 @@
     }
   }
  }
+
+
+ .tool-istartek-ext{
+   
+   .command-boby{
+    background-color: #b4b4b4;
+    padding: 5px;
+    > select{
+     width: 100%;
+     
+    }
+   }
+
+   .grid{
+
+    display: grid;
+    width: 80%;
+
+    //overflow: auto;
+    grid-template-columns: auto auto;
+    
+    //background-color: #ececec;
+    color: rgb(39, 39, 39);
+    //padding: 5px;
+    .row{
+      display: contents;
+      
+    }
+   }
+ }
