--- a/templates/gt/info-unit.html
+++ b/templates/gt/info-unit.html
@@ -50,7 +50,7 @@
         <div>{=speed}</div>
     </div>
     <div class="row">
-        <div>Orientación</div>
+        <div>Rumbo</div>
         <div>{=heading}</div>
     </div>
     <div class="row">
