--- a/templates/gt/info-unit.html
+++ b/templates/gt/info-unit.html
@@ -28,7 +28,10 @@
         <div>Matrícula</div>
         <div>{=plate}</div>
     </div>
-
+    <div class="row">
+        <div>Línea</div>
+        <div>{=phone}</div>
+      </div>
     <div class="row">
         <div>Fecha</div>
         <div>{=uDate}</div>
