--- a/templates/gt/unit-info.html
+++ b/templates/gt/unit-info.html
@@ -31,6 +31,11 @@
     </div>
 
     <div class="row">
+      <div>Línea</div>
+      <div>{=phone}</div>
+    </div>
+
+    <div class="row">
       <div>Fecha</div>
       <div>{=uDate}</div>
     </div>
