--- a/sass/gt_tool.scss
+++ b/sass/gt_tool.scss
@@ -114,7 +114,7 @@
     .page {
       //border: 10px solid transparent;
       //overflow: auto;
-      //display: grid;
+      display: grid;
       grid-gap: 0px;
       padding: 0px;
       grid-template-columns: repeat(
