--- a/templates/gt/info-unit.html
+++ b/templates/gt/info-unit.html
@@ -75,10 +75,10 @@
         <div>Último Event</div>
         <div>{=myEvent}</div>
     </div>
-    <div class="row">
+    <!--<div class="row">
         <div>Firmware</div>
         <div>{=device_model} [ {=version} - {=protocol} ]</div>
-    </div>
+    </div>-->
     <!--
     <div><input type="checkbox" data-follow="{=unitId}">Seguir</div>
     <div><input type="checkbox" data-trace="{=unitId}">Activar Traza</div>
