--- a/sass/gt_tool.scss
+++ b/sass/gt_tool.scss
@@ -114,7 +114,7 @@
     .page {
       //border: 10px solid transparent;
       //overflow: auto;
-      display: grid;
+      //display: grid;
       grid-gap: 0px;
       padding: 0px;
       grid-template-columns: repeat(
@@ -160,7 +160,7 @@
           //padding: 4px;
           font-family: futurab;
           max-width: 100%;
-          max-height: 1.8em;
+          //max-height: 1.8em;
           margin: 0px;
           //font-weight: bold;
         }
