--- a/templates/gt/info-unit-popup.html
+++ b/templates/gt/info-unit-popup.html
@@ -61,7 +61,7 @@
     </div>
     <div class="row">
         <div>último Event</div>
-        <div>{=myEvent}</div>
+        <div>{=event}</div>
     </div>
 
 </div>
