--- a/templates/gt/info-unit.html
+++ b/templates/gt/info-unit.html
@@ -73,7 +73,7 @@
     </div>
     <div class="row">
         <div>Último Event</div>
-        <div>{=myEvent}</div>
+        <div>{=event}</div>
     </div>
     <!--<div class="row">
         <div>Firmware</div>
