--- a/templates/gt/unit-info.html
+++ b/templates/gt/unit-info.html
@@ -86,7 +86,7 @@
     </div>
     <div class="row">
       <div>Último Event</div>
-      <div>{=myEvent}</div>
+      <div>{=event}</div>
     </div>
     <div class="row">
       <div>Firmware</div>
