--- a/templates/gt/info-unit.html
+++ b/templates/gt/info-unit.html
@@ -72,7 +72,7 @@
 
     </div>
     <div class="row">
-        <div>Último Event</div>
+        <div>Último Event.</div>
         <div>{=event}</div>
     </div>
     <!--<div class="row">
