--- a/css/DesignMenu.css
+++ b/css/DesignMenu.css
@@ -1,45 +1,14 @@
 /* Scss Document */
-@-webkit-keyframes drop-end {
-  0% {
-    opacity: 0;
-    -webkit-transform: scale(0.95);
-            transform: scale(0.95);
-    -webkit-transform-origin: 50% 50%;
-            transform-origin: 50% 50%;
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    -webkit-transform-origin: 50% 50%;
-            transform-origin: 50% 50%;
-  }
-}
 @keyframes drop-end {
   0% {
     opacity: 0;
-    -webkit-transform: scale(0.95);
-            transform: scale(0.95);
-    -webkit-transform-origin: 50% 50%;
-            transform-origin: 50% 50%;
+    transform: scale(0.95);
+    transform-origin: 50% 50%;
   }
   100% {
     opacity: 1;
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    -webkit-transform-origin: 50% 50%;
-            transform-origin: 50% 50%;
-  }
-}
-
-@-webkit-keyframes m_close {
-  0% {
-    opacity: 1;
-    visibility: visible;
-  }
-  100% {
-    opacity: 0;
-    visibility: hidden !important;
+    transform: scale(1);
+    transform-origin: 50% 50%;
   }
 }
 
@@ -102,13 +71,11 @@ div.qq:not([data-attr='']) {
 }
 
 .drop-end {
-  -webkit-animation: drop-end 1s ease-out;
-          animation: drop-end 1s ease-out;
+  animation: drop-end 1s ease-out;
 }
 
 .m_close {
-  -webkit-animation: m_open 2s ease-out forwards;
-          animation: m_open 2s ease-out forwards;
+  animation: m_open 2s ease-out forwards;
 }
 
 *[draggable="false"] {
@@ -141,8 +108,6 @@ div.qq:not([data-attr='']) {
 }
 
 .design-menu .item-option {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   height: 24px;
 }
@@ -310,19 +275,16 @@ div.qq:not([data-attr='']) {
 
 .design-menu .drag-start {
   opacity: 0.5;
-  -webkit-transition: 0.5s opacity ease-out;
   transition: 0.5s opacity ease-out;
 }
 
 .design-menu ul ul {
   min-height: 0px;
-  -webkit-transition: 0s all ease-out 0.2s;
   transition: 0s all ease-out 0.2s;
 }
 
 .design-menu .ul_over > ul {
   min-height: 20px;
-  -webkit-transition: 0.3s all ease-out 0.5s;
   transition: 0.3s all ease-out 0.5s;
 }
 
@@ -339,6 +301,7 @@ div.qq:not([data-attr='']) {
   background-color: rgba(0, 0, 0, 0.1);
   -webkit-touch-callout: none;
   -webkit-user-select: none;
+  -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
@@ -350,6 +313,7 @@ div.qq:not([data-attr='']) {
   background-color: aquamarine;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
+  -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
@@ -403,14 +367,12 @@ div.qq:not([data-attr='']) {
 .design1 ul {
   min-height: 0px;
   border: 2px solid green;
-  -webkit-transition: 0s all ease-out 0.2s;
   transition: 0s all ease-out 0.2s;
 }
 
 .design1 .ul_over {
   border: 2px solid green;
   min-height: 40px;
-  -webkit-transition: 0.3s all ease-out 0.5s;
   transition: 0.3s all ease-out 0.5s;
 }
 
